--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <h1 class="nav-title">AshariFauzan-Gopud</h1>
-      <button type="button" class="line-login" class="btn visible" onclick="handleLogin()">Login</button>
+      <button type="button" id="line-login" class="btn visible" onclick="handleLogin()">Login</button>
       <div id="account">
         <img src="" alt="">
         <ul>
