fix logout toggle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="account">
         <img src="" alt="">
         <ul>
-          <li id="line-logout">Log Out</li>
+          <li id="line-logout" onclick="handleLogout()">Log Out</li>
         </ul>
       </div>
     </nav>
