show error client if exists

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </ul>
           <p id="status-client"></p>
         </div>
+        <div id="error-client"></div>
         <div id="order-status"></div>
       </article>
     </section>
