--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </nav>
   </header>
   <main>
-    <section class="login-wrapper">
-      <p>Anda belum login, untuk dapat memesan makanan & minuman
-      Anda harus login terlebih dahulu</p>
+    <section class="login-wrapper blank">
+      <h1></h1>
+      <p></p>
       <button id="first-login" class="btn" onclick="handleLogin()">Login</button>
     </section>
 
