fix logout not appear

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button type="button" id="line-login" class="btn visible" onclick="handleLogin()">Login</button>
       <div id="account">
         <img src="" alt="">
-        <ul>
+        <ul class="blank">
           <li id="line-logout" onclick="handleLogout()">Log Out</li>
         </ul>
       </div>
