--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Aplikasi Gopud</title>
+  <title>Welcome to AshariFauzan-Cafetaria</title>
 </head>
 <body>
   <header>
     <nav>
-      <h1 class="nav-title">AshariFauzan-Gopud</h1>
+      <h1 class="nav-title">AshariFauzan-Cafetaria</h1>
       <button type="button" id="line-login" class="btn visible" onclick="handleLogin()">Login</button>
       <div id="account">
         <img src="" alt="">
@@ -48,7 +48,7 @@
           </ul>
           <p id="status-client"></p>
         </div>
-        <div id="error-client"></div>
+        <div id="control-client"></div>
         <div id="order-status"></div>
       </article>
     </section>
